# cap-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  notes.db
src/: app.rs  config.rs  main.rs  tui.rs
src/auth/: mod.rs  supabase.rs
src/cli/: args.rs  commands.rs  mod.rs
src/db/: kv_repo.rs  memo_repo.rs  mod.rs  schema.rs
src/domain/: memo.rs  mod.rs
src/format/: mod.rs  text.rs  time.rs
src/tui/: handler.rs  mod.rs  state.rs  view.rs
