[package]
name = "cap-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = {version = "4.5.54", features = ["derive"]}
crossterm = "0.29.0"
ratatui = "0.29.0"
rusqlite = "0.38.0"
structopt = "0.3.26"
uuid = { version = "1.12.1", features = ["v4"] }
unicode-width = "0.2.0"

[[bin]]
name = "cap"
path = "src/main.rs"
